---
source: src/expr/src/scalar/func/impls/mz_acl_item.rs
expression: "#[sqlfunc(sqlname = \"mz_validate_role_privilege\")]\nfn mz_validate_role_privilege(privilege: String) -> Result<bool, EvalError> {\n    let privilege_upper = privilege.to_uppercase();\n    if privilege_upper != \"MEMBER\" && privilege_upper != \"USAGE\" {\n        Err(EvalError::InvalidPrivileges(format!(\"{}\", privilege.quoted()).into()))\n    } else {\n        Ok(true)\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct MzValidateRolePrivilege;
impl crate::func::EagerUnaryFunc for MzValidateRolePrivilege {
    type Input<'a> = String;
    type Output<'a> = Result<bool, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        mz_validate_role_privilege(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for MzValidateRolePrivilege {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("mz_validate_role_privilege")
    }
}
fn mz_validate_role_privilege(privilege: String) -> Result<bool, EvalError> {
    let privilege_upper = privilege.to_uppercase();
    if privilege_upper != "MEMBER" && privilege_upper != "USAGE" {
        Err(EvalError::InvalidPrivileges(format!("{}", privilege.quoted()).into()))
    } else {
        Ok(true)
    }
}
